--- a/ActionStageSwift/Base.lproj/Main.storyboard
+++ b/ActionStageSwift/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--First-->
         <scene sceneID="Oah-12-gzg">
             <objects>
                 <tableViewController id="gaA-co-DEe" customClass="FirstTableViewController" customModule="ActionStageSwift" customModuleProvider="target" sceneMemberID="viewController">
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="m3h-aS-n6a" id="d6R-bM-wQu">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -32,7 +32,7 @@
                             <outlet property="delegate" destination="gaA-co-DEe" id="i7D-d8-1Xk"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="GcE-2S-I3I">
+                    <navigationItem key="navigationItem" title="First" id="GcE-2S-I3I">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Kuj-jG-tu1">
                             <connections>
                                 <action selector="addCell:" destination="gaA-co-DEe" id="Rug-Hi-3Lt"/>
@@ -79,7 +79,7 @@
             </objects>
             <point key="canvasLocation" x="-462" y="20"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Second-->
         <scene sceneID="hGA-gG-QGf">
             <objects>
                 <tableViewController id="MIK-vF-RCb" customClass="SecondTableViewController" customModule="ActionStageSwift" customModuleProvider="target" sceneMemberID="viewController">
@@ -92,7 +92,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e1f-tu-roL" id="G1I-5H-dq3">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -102,7 +102,7 @@
                             <outlet property="delegate" destination="MIK-vF-RCb" id="zes-ns-tiP"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="Se0-lD-aZ3"/>
+                    <navigationItem key="navigationItem" title="Second" id="Se0-lD-aZ3"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qUO-0Z-kMT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
